--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+.jobform {
+  float: right;
+  border: solid;
+  width: 400px;
+  height: 100%;
+  padding: 50px;
+  text-align: center;
+  margin: 15px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
