almost done finish search bar

--- a/src/App.css
+++ b/src/App.css
@@ -99,9 +99,9 @@
 
 .jumbotron {
   position: absolute;
-  margin-top: 150px;
-  width: 70%;
-  right: 275px;
+  margin-top: 125px;
+  width: 700px;
+  right: 250px;
   padding: 10px;
 }
 
