--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
 
 .login-div {
   position: relative;
+  margin-top: 100px;
   top: 50px;
   text-align: center;
 }
@@ -53,7 +54,7 @@
 }
 
 .jobs {
-  padding-top: 60px;
+  padding-top: 10px;
   display: flex;
   flex-direction: column;
 }
