--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 .jobpage {
   display: flex;
   flex-direction: row;
-  flex-wrap:wrap;
+  justify-content: center;
 }
 
 .jobs {
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 300px;
 }
 
 .jobdetails {
@@ -67,11 +68,20 @@
   flex-direction: column;
   width: 100%;
   height: 390px;
+
 }
+
+
+
 
 
 .searchbar {
   margin-top: 75px;
+}
+
+.searchbar .row{
+
+  margin: auto;
 }
 
 /* .searchbar .input-group {
