--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,27 @@
   width: 500px;
   height: 100%;
 }
+
+.car-image {
+width: 100%;
+height: 100%;
+}
+.carousel-caption {
+  top: 5px;
+  bottom: auto;
+  }
+
+.car-text{
+  color: black;
+  background-color: #f7f7f7;
+  border-color: #0275d8;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 10px;
+  padding:10px;
+
+}
+
 .jobdetails .modal-dialog {
 
   bottom: 20px;
