--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,7 @@ height: 100%;
   border-style: solid;
   border-radius: 10px;
   padding:10px;
+  opacity: 0.7;
 
 }
 
@@ -86,13 +87,26 @@ height: 100%;
   display: flex;
   flex-direction: column;
   width: 500px;
-  height: 125px;
+  height: 100%;
 }
+
+.logoandbtn{
+  display: flex;
+  justify-content: space-between;
+  width:100%
+}
+
+.jobdetails .btn{
+  width:50%;
+  height:100%;
+}
+
+
 .jobdetails .modal-body {
   display: relative;
   flex-direction: column;
   width: 100%;
-  height: 390px;
+  height: 500px;
 
 }
 
