--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,39 @@
 }
 
 .login-form {
+  display:inline-block;
   width: 100%;
   max-width: 330px;
-  padding:15px;
-  margin: auto; 
-  height: 100%;
-  display: inline-block;
+  position: fixed;
+  padding:40px;
+  text-align: center;
+  border:solid;
+  border-color: #f7f7f7;
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%, 0);
+  box-shadow: 0 0 5px 1px lightgrey;
+  
 }
 
 .login-div {
-  position: relative;
-  margin-top: 100px;
-  top: 50px;
-  text-align: center;
+  direction:flex;
+  flex-direction:row;
+  height:100%;
+  margin-top:200px;
+  
+  
+  
+  
+}
+
+.signup-div{
+  margin-top:150px;
+}
+
+.imagediv{
+  height:100%;
+  width:100%;
 }
 
 
@@ -168,6 +188,7 @@ height: 100%;
   height: 50vh;
   width: 50vh;
   padding:15px;
+  
 }
 
 .rbc-btn-group{
@@ -181,6 +202,7 @@ height: 100%;
   border:solid;
   border-color: #f7f7f7;
   padding:10px;
+  
   
 } 
 
